--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<docker.image.prefix>springio</docker.image.prefix>
+		<docker.image.prefix>westjet</docker.image.prefix>
 	</properties>
 
 	<dependencies>
